css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

:root,
:root.light-theme {
    --text-color: #111111;
    --hr-color: #111111A0;
    --bg-color: #fff;

    --accent-color: #bc0839;

    --link-color: #fa5252;
    --link-hover-color: #ffb4b4;
    --highlight-color: #f5255ca0;

    --code-color: #000;
    --code-bg-color: #ffffff80;
    --code-border: 1px solid #00000099;

    --mention-color: #3246b4;
    --box-border: 1px solid #0000004d;
    --box-outline: 2px solid #00000099;
    --box-area-bg-color: #00000004;
}

@media (prefers-color-scheme: dark) {
    :root {
        --text-color: #fff;
        --hr-color: #ffffffA0;
        --bg-color: #111111;

        --accent-color: #bc0839;

        --link-color: #fa5252;
        --link-hover-color: #fff;
        --highlight-color: #bc0839d0;

        --code-color: #fff;
        --code-bg-color: #0000004d;
        --code-border: 1px solid #ffffff33;

        --mention-color: #98acff;
        --box-border: 1px solid #ffffff4d;
        --box-outline: 2px solid #ffffff99;
        --box-area-bg-color: #ffffff08;
    }
}

:root.dark-theme {
    --text-color: #fff;
    --hr-color: #ffffff80;
    --bg-color: #111111;

    --accent-color: #bc0839;

    --link-color: #fa5252;
    --link-hover-color: #fff;
    --highlight-color: #bc0839d0;

    --code-color: #fff;
    --code-bg-color: #0000004d;
    --code-border: 1px solid #ffffff33;

    --mention-color: #98acff;
    --box-border: 1px solid #ffffff4d;
    --box-outline: 2px solid #ffffff99;
    --box-area-bg-color: #ffffff08;
}

/*adjust mobile text inflation*/
html {
    -webkit-text-size-adjust: 100%;
    -webkit-tap-highlight-color: transparent;
    text-size-adjust: 100%;
}

body,
button,
input,
textarea,
select {
    font-family: "Montserrat", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

body {
    margin: 0;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    color: var(--text-color);
    background-color: var(--bg-color);
    text-decoration: none;
    word-wrap: break-word;
}

main {
    margin: 0 auto;
    flex: 1;
    width: calc(100vw - 40px);
    max-width: calc(800px - env(safe-area-inset-left));
    margin-top: 65px;
    margin-bottom: 20px;
    font-size: 16px;
}

@view-transition {
    navigation: auto;
}

h1,
h2,
h3,
h4 {
    margin: 0;
    padding: 0;
}

h1 {
    font-size: 1.8em;
}

li {
    padding: 0px 0 5px 0;
}

.p-below-title {
    margin: 0;
}

.p-no-spacing {
    margin-top: 0;
}

.after-title {
    margin-top: 0.5em;
}

.h-below-ul {
    margin-top: 1em;
}

.no-bottom {
    margin-bottom: 0;
}

[id] {
    scroll-margin-top: 60px;
    /* fix anchors */
}

.image {
    width: 100%;
    border-radius: 10px;
}

::selection {
    background-color: var(--highlight-color);
}

a:link {
    color: var(--link-color);
    transition: color 0.10s;
}

a:visited {
    color: var(--link-color);
}

a:hover {
    color: var(--link-hover-color);
}

a[target="_blank"]::after {
    content: "";
    width: 1em;
    height: 1em;
    margin: 0 0em 0.1em 0.15em;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' %3E%3Cpath d='M9 2v1h3.3L6 9.3l.7.7L13 3.7V7h1V2ZM4 4c-1.1 0-2 .9-2 2v6c0 1.1.9 2 2 2h6c1.1 0 2-.9 2-2V7l-1 1v4c0 .6-.4 1-1 1H4c-.6 0-1-.4-1-1V6c0-.6.4-1 1-1h4l1-1Z' style='fill:%23fa5252'/%3E%3C/svg%3E");
    background-size: contain;
    display: inline-block;
    vertical-align: sub;
}

@media (prefers-reduced-motion) {
    a:link {
        transition: none;
    }
}

.no-color-link {
    color: #FFF !important;
}

.no-color-link-themed {
    color: var(--text-color) !important;
}

.no-underline-link {
    text-decoration: none;
    transition: none !important;
}

.no-underline-link-footer {
    text-decoration: none;
}

button {
    background-color: var(--accent-color);
    font-weight: 600;
    border-radius: 5px;
    font-size: 15px;
    color: #fff;
    border: 1px solid #ffffff15;
    cursor: pointer;
    transition: transform 0.1s, color 0.1s, background-color 0.1s;
}

button:active {
    transform: scale(0.95);
}

button:hover,
button:focus {
    color: var(--accent-color) !important;
    background: #fff;
    outline: 1px solid var(--accent-color);
}

@media (prefers-reduced-motion) {
    button:active {
        transform: none;
    }
}

code,
.codeBox,
.codeBoxTight,
mention {
    font-family: Cascadia Code, FMono-Regular, Consolas, DejaVu Sans Mono, Liberation Mono, Menlo, monospace !important;
}

code {
    color: var(--code-color);
    font-size: 14px;
    padding: 1px 4px;
    background-color: var(--code-bg-color);
    border: var(--code-border);
    border-radius: 5px;
    -webkit-user-select: all;
    user-select: all;
}

.codeBox {
    font-size: 14px;
    padding: 15px;
    line-height: 1.6;
    background-color: rgba(15, 15, 15, 0.5);
    outline: 1px solid rgba(255, 255, 255, 0.3);
    border-radius: 10px;
    color: #fff;
}

.codeBoxTight {
    font-size: 14px;
    padding: 10px;
    margin-bottom: 10px;
    line-height: 1.6;
    background-color: rgba(15, 15, 15, 0.5);
    outline: 1px solid rgba(255, 255, 255, 0.3);
    border-radius: 10px;
    color: #fff;
}

mention {
    color: var(--mention-color);
    font-size: 15px;
    padding: 2px 5px;
    background-color: rgba(88, 101, 242, 0.25);
    border: 1px solid rgba(152, 172, 255, 0.6);
    border-radius: 5px;
    -webkit-user-select: all;
    user-select: all;
}

tag {
    color: #FFF;
    background-color: var(--accent-color);
    border: 1px solid var(--accent-color);
    font-size: 15px;
    padding: 0px 5px;
    border-radius: 5px;
    transition: transform 0.1s, color 0.1s, background-color 0.1s;
    -webkit-user-select: all;
    user-select: all;
}

tag:hover {
    color: var(--accent-color);
    background: #fff;
    outline: 1px solid var(--accent-color);
}

.tag-link {
    text-decoration: none;
}

mention::selection {
    background-color: rgba(88, 101, 242, 0.5);
}

new {
    color: #FFF;
    font-size: 14px;
    padding: 1px 6px;
    background-color: rgba(88, 101, 242, 0.6);
    border: 1px solid #FFF;
    border-radius: 5px;
    position: absolute;
    top: 0;
    left: 0;
    margin: 5px;
    -webkit-user-select: none;
    user-select: none;
}

hr {
    margin: 20px 0;
    height: 2px;
    border-width: 0;
    background-color: var(--hr-color);
    color: var(--hr-color);
}

hr.hr-below-title {
    margin-top: 0.5em;
    margin-left: auto;
    margin-right: auto;
}

.indent {
    padding-left: 20px;
}

/*blockquote*/
blockquote {
    border-left: 5px solid rgba(255, 102, 102, 0.9);
    padding: 15px;
    margin-left: 0px;
    margin-right: 0px;
    background-color: rgba(0, 0, 0, 0.4);
    border: 1px solid rgba(255, 255, 255, 0.2);
    border-radius: 10px;
}

.miniquote {
    border-left: 3px solid rgb(255, 255, 255, 0.8);
    background-color: rgba(0, 0, 0, 0.5);
    width: fit-content;
    border: 0;
    border-radius: 0;
    padding: 10px;
    -webkit-backdrop-filter: blur(5px);
    backdrop-filter: blur(5px);
}

.success {
    border: 2px solid rgba(8, 255, 111, 0.5);
    background-color: rgba(8, 255, 111, 0.3);
}

.info {
    border: 2px solid rgba(33, 150, 243, 0.5);
    background-color: rgba(33, 150, 243, 0.3);
}

.warning {
    border: 2px solid rgba(255, 152, 0, 0.5);
    background-color: rgba(255, 152, 0, 0.3);
}

.fail {
    border: 2px solid rgba(253, 60, 26, 0.5);
    background-color: rgba(253, 60, 26, 0.3);
}

.rainbow {
    border-left: 0px;
    border: 1px solid rgba(253, 60, 26, 0.5);
    box-shadow: 0px 0px 15px 5px rgba(255, 255, 255, 0.2);
    animation: rainbow 4s infinite;
}

@keyframes rainbow {

    0%,
    100% {
        border-color: rgba(255, 0, 0, .7);
        background-color: rgba(255, 0, 0, .15)
    }

    8% {
        border-color: rgba(255, 127, 0, .7);
        background-color: rgba(255, 127, 0, .15)
    }

    16% {
        border-color: rgba(255, 255, 0, .7);
        background-color: rgba(255, 255, 0, .15)
    }

    25% {
        border-color: rgba(127, 255, 0, .7);
        background-color: rgba(127, 255, 0, .15)
    }

    33% {
        border-color: rgba(0, 255, 0, .7);
        background-color: rgba(0, 255, 0, .15)
    }

    41% {
        border-color: rgba(0, 255, 127, .7);
        background-color: rgba(0, 255, 127, .15)
    }

    50% {
        border-color: rgba(0, 255, 255, .7);
        background-color: rgba(0, 255, 255, .15)
    }

    58% {
        border-color: rgba(0, 127, 255, .7);
        background-color: rgba(0, 127, 255, .15)
    }

    66% {
        border-color: rgba(0, 0, 255, .7);
        background-color: rgba(0, 0, 255, .15)
    }

    75% {
        border-color: rgba(127, 0, 255, .7);
        background-color: rgba(127, 0, 255, .15)
    }

    83% {
        border-color: rgba(255, 0, 255, .7);
        background-color: rgba(255, 0, 255, .15)
    }

    91% {
        border-color: rgba(255, 0, 127, .7);
        background-color: rgba(255, 0, 127, .15)
    }
}

#current-season {
    opacity: 0;
    transition: opacity 0.2s ease-in-out;
}

#current-season.fade-in {
    opacity: 1;
}

.live-dot {
    width: 10px;
    height: 10px;
    background-color: var(--accent-color);
    margin: auto 0;
    margin-left: 12px;
    border-radius: 50%;
    box-shadow: 0 0 0 0 rgba(188, 8, 57, 0.7);
    animation: live-dot-pulse 2.0s infinite;
}

@keyframes live-dot-pulse {
    0% {
        box-shadow: 0 0 0 0 rgba(188, 8, 57, 0.7);
    }

    70% {
        box-shadow: 0 0 0 8px rgba(188, 8, 57, 0);
    }

    100% {
        box-shadow: 0 0 0 0 rgba(188, 8, 57, 0);
    }
}

.discordRolePreviewContainer {
    min-height: 340px;
}

.rule-category-box {
    border: 1px solid #cccccccc;
    border-radius: 10px;
    padding: 15px;
    margin-bottom: 10px;
}

#currentTeamColors {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;
    margin-top: 5px;
    border-radius: 10px;
    padding: 10px;
    border: 1px solid #ccccccaa;
    background-color: var(--box-area-bg-color);
}

.color-box {
    width: 35px;
    aspect-ratio: 1 / 1;
    border-radius: 5px;
    margin: 2px;
    opacity: 0;
    animation: fadeIn 0.2s ease-in-out forwards;
}

@keyframes fadeIn {
    to {
        opacity: 1;
    }
}

.question-mark-icon {
    height: 20px;
    width: 20px;
    vertical-align: middle;
}

#JSTeamBox,
#JSMatchHistory {
    margin-bottom: 20px;
}

#JSTeamBox,
#JSMatchHistory {
    opacity: 0;
    transition: opacity 0.2s ease-in-out;
}

#JSTeamBox.fade-in,
#JSMatchHistory.fade-in {
    opacity: 1;
}

dialog.cookie-popup {
    position: fixed;
    margin: 0 15px 0 15px;
    bottom: 15px;
    max-width: 350px;
    border-radius: 10px;
    border: 1px solid #cccccccc;
    background-color: rgba(0, 0, 0, 0.5);
    -webkit-backdrop-filter: blur(15px);
    backdrop-filter: blur(15px);
    color: #fff;
    padding: 10px;
    text-align: center;
    z-index: 1000;
    opacity: 0;
    animation: fadeIn 0.2s ease-in-out forwards;
}

@media screen and (max-width: 767px) {
    dialog.cookie-popup {
        max-width: 100%;
        border-radius: 0;
        margin: 0;
        bottom: 0;
        border: none;
        border-top: 1px solid #cccccccc;
    }
}

.youtube-embed {
    max-width: 100%;
    aspect-ratio: 16 / 9;
}

umkl-navbar {
    background-color: var(--accent-color);
    position: fixed;
    width: 100%;
    height: 48px;
    z-index: 8;
}

umkl-footer {
    color: #FFF;
    background-color: var(--accent-color);
    text-align: center;
    text-decoration: none;
    padding: 5px;
    height: 20px;
    z-index: 1;
}

